@startuml
title "Conecta 4 - Domain Model v.0.0.2"
class Conecta4
class Board
class Player
class Disc
class Goal
class Turn

enum Color{
RED
YELLOW
}

Conecta4 *--> Board
Conecta4 *--> Turn
Conecta4 *--> "2" Player
Conecta4 *--> Goal
Player *--> "21" Disc
Board *--> "7" Colum
Colum *--> "6" Row
Disc *--> Color
Row --> Disc
Player *--> Color
Player o--> Goal
@enduml